--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <!-- Milligram CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Lora', serif;
+            font-family: 'Noto Sans', sans-serif;
         }
     </style>
     <script type="text/javascript" src="https://d3js.org/d3.v6.min.js"></script>
@@ -19,16 +19,14 @@
     <div class='container'>
 
         <h2>
-            Unemployed persons by industry, 2000-2010
+            Unemployed Persons by Industry, 2000-2010
         </h2>
         <h5>
             Data Source: <a href='https://www.bls.gov/home.htm' target="_blank">BLS</a>
         </h5>
         <div class="stacked_chart">
-
         </div>
         <div class="total_chart">
-
         </div>
     </div>
 
